# SnakeGameSFML

./: .gitignore  CMakeLists.txt  README.md
assets/levels/: lvl2.txt
lib/: Engine.h  Food.h  SnakeSection.h  Wall.h
src/: Engine.cpp  Food.cpp  SnakeSection.cpp  Wall.cpp  draw.cpp  input.cpp  main.cpp  update.cpp
